# epic_news

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CLAUDE.md  Dockerfile.api  Dockerfile.code-interpreter  Dockerfile.combined  Dockerfile.streamlit  Makefile  README.md  TODO.md  bandit-report.json  changes.md  codecov.yml  coverage.xml  crewai_flow.html  curl.txt  docker-compose.api.yml  docker-compose.combined.yml  docker-compose.streamlit.yml  docker-compose.yml  mkdocs.yml  netatmo.json  osv-scanner.toml  pydantic_implementation_plan.md  pyproject.toml  rapport_actualites_22_juin_2025.html  supervisord.conf  test_json_repair.py  test_lead_scoring.py  test_meeting_prep.py
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docker-publish-api.yml  docker-publish-code-interpreter.yml  docker-publish-combined.yml  docker-publish-streamlit.yml  docs.yml  greetings.yml  label.yml  security.yml
.serena/: project.yml
.serena/memories/: architectural_principles.md  code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
data/: feedly.opml
docs/: 1_DEVELOPMENT_GUIDE.md  2_BUG_REPORT.md  2_TOOLS_HANDBOOK.md  3_ARCHITECTURAL_PATTERNS.md  4_USER_GUIDE.md  5_DOCKER_GUIDE.md  7_IMPACT_ANALYSIS_REFACTORING_TESTS.md  8_MENU_DESIGNER_LESSONS_LEARNED.md  99_deep_research.md  9_INTEGRATION_PATTERNS_REFERENCE.md  COMPOSIO_SETUP_GUIDE.md  COMPOSIO_TOOLS_GUIDE.md  CREWAI_ENGAGEMENT_RULES.md  CREWAI_TOOLS_AND_MCP_GUIDE.md  Claude_prompt.md  DESIGN_PRINCIPLES.md  DOCKER.md  DeepResearch_Impact_Analysis.md  FIX_DOCUMENTATION.md  HTML_RENDERER_FIXES.md  MCP_INTEGRATION_GUIDE.md  SHOPPING_ADVISOR_CREW.md  TODO.md  USE_CASES.md  agent_handbook.md  claude_prompt.md  html_rendering_pattern.md  index.md  knowledge_base_maintenance.md  output_formatting_guide.md  reference.md  sweep-runbook.md  tools_handbook.md
docs/adr/: ADR-001-mistral-small-4.md  ADR-002-scoped-memory.md  ADR-003-perplexity-search.md  ADR-004-flow-orchestration.md  ADR-005-deterministic-html-rendering.md  ADR-006-realtime-retrieval.md  ADR-007-json-tool-standardization.md  ADR-008-pydantic-model-first.md  ADR-009-composio-integration.md  ADR-010-uv-package-manager.md  ADR-011-consolidated-report-css.md
docs/archive/: deep_research_crew_spec.md  menu_designer_integration_fix.md  sample_prompt.md  test.md
docs/explanations/: architecture.md  index.md
docs/how-to/: composio_setup.md  development_setup.md  index.md  mcp_setup.md  observability.md  troubleshooting.md
docs/pr_specs/: PR-001-json-output-standard.md  PR-002-scraper-consolidation.md  PR-003-flow-and-reporting-enforcement.md  PR-004-rendering-lint-and-docs.md  PR-005-html-report-simplification.md
docs/prd/: PRD-federated-html.md
docs/reference/: RENDERING_ARCHITECTURE.md  api_keys.md  index.md  outputs.md  tools.md
docs/troubleshooting/: COMMON_ERRORS.md  index.md
docs/tutorials/: getting_started.md  index.md  user_guide.md
output/classify/: decision.md
scripts/: __init__.py  analyze_library_crew.py  clean_all_reports.py  debug_holiday_plan_html.py  debug_rss_html.py  fetch_rss_articles.py  fix_cooking_files.py  fix_html_reports.py  fix_imports.py  fix_meal_plan_mapping.py  fix_output_naming_consistency.py  fix_paprika_friendly_system.py  optimize_crews.py  update_knowledge_base.py  validate_production_readiness.py  verify_all_crews.sh
src/epic_news/: api.py  app.py  main.py  rag_config.py  router.py
templates/: cross_reference_report_template.html  dashboard_template.html  data_report_template.html  menu_report_template.html  report_template.html  universal_report_template.html
templates/css/: dashboard.css  menu_report.css  report.css
tests/: conftest.py  test_advanced_libraries.py  test_api.py  test_app.py  test_determine_crew_router.py  test_flow_wiring.py  test_generate_pestel_wiring.py  test_html_to_markdown.py  test_rag_config.py
tests/config/: test_llm_config_anthropic_openrouter.py  test_llm_config_empty_retry.py  test_llm_config_routing.py  test_llm_config_tool_call_coercion.py  test_llm_config_tool_calling.py
tests/crews/: _registry.py  conftest.py  test_agent_llm_contract.py  test_async_agent_isolation.py  test_classify_config.py  test_composio_gmail_error_surfacing.py  test_deep_research_capability_contract.py  test_holiday_planner_structure.py  test_holiday_reporter_no_tools.py  test_information_extraction_enrich.py  test_pestel_structure.py  test_post_crew_send_tools_guard.py
tests/flows/: conftest.py  test_extract_info_enriched_brief.py  test_generate_holiday_plan_docx.py  test_generate_output_file.py  test_holiday_no_destination.py  test_kickoff_request_override.py  test_reception_flow_e2e.py  test_send_email_binary_report.py  test_send_email_honesty.py
tests/models/: test_all_pydantic_models.py  test_content_state.py  test_content_state_crew_inputs.py  test_content_state_enriched_context.py  test_crew_report_models.py  test_deep_research_report_resilience.py
tests/rendering/: test_all_renderers_markdown_contract.py  test_deep_research_markdown_rendering.py  test_template_manager_rendering.py
tests/scripts/: regenerate_book_summary.py  regenerate_company_news.py  regenerate_cross_reference_report.py  regenerate_deep_research.py  regenerate_financial_report.py  regenerate_holiday_plan.py  regenerate_menu_plan.py  regenerate_sales_prospecting.py  test_analyze_library_crew.py  test_cooking_output.html  test_cooking_renderer.py  test_deep_research_extractor.py  test_html_rendering.py  test_update_knowledge_base.py  test_update_knowledge_base_script.py
tests/tools/: manual_kraken_test.py  test_accuweather_tool.py  test_airtable_tool.py  test_alpha_vantage_tool.py  test_batch_article_scraper_tool.py  test_coinmarketcap_historical_tool.py  test_coinmarketcap_info_tool.py  test_coinmarketcap_list_tool.py  test_coinmarketcap_news_tool.py  test_coinmarketcap_tool.py  test_email_search.py  test_exchange_rate_tool.py  test_factory_wiring.py  test_finance_tools.py  (+40 more)
(+515 files in other folders)
