[project]
name = "epic_news"
version = "0.1.0"
description = "epic-news using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=0.5.23",
    "composio>=0.1.1",
    "composio-crewai>=0.7.18",
    "coverage>=7.9.1",
    "crewai>=0.130.0",
    "crewai-tools[mcp]>=0.47.1",
    "firecrawl-py>=2.8.0",
    "freezegun>=1.5.2",
    "gitpython>=3.1.44",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.2.14",
    "pandas>=2.3.0",
    "pygithub>=2.6.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "ruff>=0.11.13",
    "serpapi>=0.1.5",
    "tavily-python>=0.7.6",
    "weasyprint>=65.1",
    "jinja2>=3.1.3",
    "lxml>=5.2.1",
    "yfinance>=0.2.63",
    "exa-py>=1.14.9",
    "matplotlib>=3.10.3",
    "streamlit>=1.46.0",
    "watchdog>=6.0.0",
    "fastapi>=0.115.13",
    "uvicorn>=0.34.3",
    "pathlib>=1.0.1",
    "shutils>=0.1.0",
    "pyairtable>=3.1.1",
    "feedparser>=6.0.11",
    "newspaper3k>=0.2.8",
    "lxml-html-clean>=0.4.2",
    "wikipedia>=1.4.0",
    "yamllint>=1.37.1",
    "pytest-asyncio>=1.0.0",
    "vulture>=2.14",
    "unicode>=2.9",
    "unidecode>=1.4.0",
    "pendulum>=3.1.0",
    "faker>=37.4.0",
    "pytest-mock>=3.14.1",
    "loguru>=0.7.3",
]

[project.scripts]
kickoff = "epic_news.main:kickoff"
plot = "epic_news.main:plot"


[project.optional-dependencies]
dev = [
    "yamllint",
    "pre-commit", # Très recommandé pour automatiser yamllint
    "ruff",
    # Autres dépendances de dev
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "langsmith",
    "Faker",
    "pytest-mock",
    "pendulum",
]

[tool.crewai]
type = "flow"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# Enable more comprehensive linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "RET", # flake8-return
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "UP035",  # Use `X | Y` for type annotations - DISABLED for CrewAI compatibility
    "UP045",  # Use `X | Y` for type annotations - DISABLED for CrewAI compatibility
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err`
    "UP007",  # Use `X | Y` for type annotations - DISABLED for CrewAI compatibility
]

[tool.ruff.format]
# Like Black, but faster.
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["epic_news"]
force-single-line = false
split-on-trailing-comma = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
]
env = [
    "POSTHOG_DISABLED=1",
]
filterwarnings = [
    'ignore:PydanticDeprecatedSince20:',
    # Or more specific:
    # 'ignore:Using extra keyword arguments on `Field` is deprecated:pydantic.PydanticDeprecatedSince20',
]

[tool.yamllint]
# Voici les configurations pour yamllint
# Chaque clé correspond à une règle ou une option de yamllint

# Désactivez des règles spécifiques
disable = ["line-length"]

# Activez et configurez des règles spécifiques
# Note: Les valeurs ci-dessous sont des exemples. Référez-vous à la
# documentation de yamllint pour toutes les options.

# indentation (indentation à 2 espaces, pas de tabulation)
# Indentation spaces
# indentation = { spaces = 2, indent-sequences = true, check-multi-line-strings = true }

# trailing-spaces (pas d'espaces en fin de ligne)
trailing-spaces = { forbid = true }

# document-start (le document doit commencer par '---')
document-start = { present = true }

# document-end (le document ne doit pas se terminer par '...')
document-end = { present = false }

# empty-lines (nombre d'espaces maximum entre les lignes vides)
empty-lines = { max = 1 }

# line-length (longueur de ligne maximale)
line-length = { max = 120 }

# new-line-at-end-of-file (s'assurer qu'il y a une nouvelle ligne à la fin du fichier)
new-line-at-end-of-file = { present = true }

# key-duplicates (pas de clés dupliquées dans le même objet)
key-duplicates = { forbid = true }

# hyphens (espaces après les tirets dans les listes)
hyphens = { max-spaces-after = 1 }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "yamlfix>=1.17.0",
    "yamllint>=1.37.1",
]

# quoted-strings (exiger les guillemets pour les chaînes multi-lignes)
# quoted-strings = { required = true }

# forbidden-contents (interdire certains contenus, par exemple des noms d'hôtes en dur)
# forbidden-contents = { forbidden = [ "http://evil.com" ] }

# Commande de fichier (utile pour cibler des fichiers spécifiques ou exclure)
# parse = { pattern = "\\.yaml$" } # Par défaut yamllint traite .yaml, .yml
# exclude = [
#     "path/to/ignore/**/*.yaml",
#     "another/path/generated.yml"
# ]