
[project]
name = "epic_news"
version = "3.1.2"
description = "epic-news using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    # --- Core runtime (CrewAI + integrations) ---
    "crewai>=1.14.2",
    "crewai-tools[mcp]>=0.47.1",
    "mcp>=1.26.0",
    "composio>=0.1.1",
    "composio-crewai>=0.7.18",
    "composio-openai>=0.8.7",
    "litellm>=1.83.0",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.2.14",
    "langfuse>=3.2.3",
    "mem0ai>=0.1.114",
    "minds-sdk>=1.3.3",
    "chromadb>=0.5.23",
    # --- Pydantic / data ---
    "pydantic>=2.7.0",
    "loguru>=0.7.3",
    "tenacity>=8.2.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "unidecode>=1.4.0",
    # --- HTTP / Web ---
    "requests>=2.33.0",
    "requests-cache>=1.2.0",
    "httpx>=0.27.2",
    "fastapi>=0.115.13",
    "fastapi-sso>=0.17.0",
    "uvicorn>=0.34.3",
    "streamlit>=1.46.0",
    "watchdog>=6.0.0",
    "apscheduler>=3.11.2",
    # --- Data sources / scraping ---
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "lxml-html-clean>=0.4.2",
    "feedparser>=6.0.11",
    "newspaper3k>=0.2.8",
    "wikipedia>=1.4.0",
    "wikipedia-mcp-server>=1.0.1",
    "tavily-python>=0.7.24",
    "exa-py>=1.14.9",
    "firecrawl-py>=4.22.2",
    "serpapi>=0.1.5",
    "yfinance>=1.3.0",
    "pyairtable>=3.1.1",
    "pygithub>=2.9.1",
    "gitpython>=3.1.44",
    # --- Rendering / output ---
    "jinja2>=3.1.3",
    "weasyprint>=65.1",
    "pygments>=2.19.2",
    # --- Numerical / plotting ---
    "pandas>=2.3.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "scipy>=1.15.3",
    "scikit-learn>=1.7.0",
    "markdown-it-py>=4.0.0",
]

[project.scripts]
kickoff = "epic_news.main:kickoff"
plot = "epic_news.main:plot"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.0.0",
    "pytest-env>=1.1.5",
    "pytest-mock>=3.14.1",
    "pytest-regressions>=2.10.0",
    "pytest-datadir",
    "coverage>=7.9.1",
    "freezegun>=1.5.2",
    "faker>=37.4.0",
    "pendulum>=3.1.0",
    "langsmith",
]

[tool.crewai]
type = "flow"

[tool.ruff]
line-length = 110
fix = true
target-version = "py313"

[tool.ruff.lint]
# Enable more comprehensive linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "RET", # flake8-return
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults
    "B904",   # Within an `except` clause, raise exceptions with `raise ... from err`
    "RET504", # Unnecessary assignment to `result` before `return` statement
]

[tool.ruff.format]
# Like Black, but faster.
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["epic_news"]
force-single-line = false
split-on-trailing-comma = true

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src",
]
env = [
    "POSTHOG_DISABLED=1",
    # Sentinel API keys — tests must mock LLM / Composio / scraping calls so
    # these values never reach a real provider. Set at pytest startup so they
    # land in os.environ before any module-level client validation runs.
    "RAPIDAPI_KEY=test_rapidapi_key_for_ninja",
    "SERPAPI_API_KEY=test_serpapi_key_for_web_search",
    "OPENROUTER_API_KEY=test_openrouter_key_for_ci",
    "OPENAI_API_KEY=test_openai_key_for_ci",
    "COMPOSIO_API_KEY=test_composio_key_for_ci",
    "TAVILY_API_KEY=test_tavily_key_for_ci",
    "EXA_API_KEY=test_exa_key_for_ci",
    "FIRECRAWL_API_KEY=test_firecrawl_key_for_ci",
    "ALPHAVANTAGE_API_KEY=test_alphavantage_key_for_ci",
    "COINMARKETCAP_API_KEY=test_coinmarketcap_key_for_ci",
    "KRAKEN_API_KEY=test_kraken_key_for_ci",
    "KRAKEN_API_SECRET=test_kraken_secret_for_ci",
    "MAIL=ci-test@example.com",
    "EPIC_ENABLE_EMAIL=false",
]
filterwarnings = [
    'ignore:PydanticDeprecatedSince20:',
    # Or more specific:
    # 'ignore:Using extra keyword arguments on `Field` is deprecated:pydantic.PydanticDeprecatedSince20',
]

[tool.yamllint]
# Voici les configurations pour yamllint
# Chaque clé correspond à une règle ou une option de yamllint

# Désactivez des règles spécifiques
disable = ["line-length"]

# Activez et configurez des règles spécifiques
# Note: Les valeurs ci-dessous sont des exemples. Référez-vous à la
# documentation de yamllint pour toutes les options.

# indentation (indentation à 2 espaces, pas de tabulation)
# Indentation spaces
# indentation = { spaces = 2, indent-sequences = true, check-multi-line-strings = true }

# trailing-spaces (pas d'espaces en fin de ligne)
trailing-spaces = { forbid = true }

# document-start (le document doit commencer par '---')
document-start = { present = true }

# document-end (le document ne doit pas se terminer par '...')
document-end = { present = false }

# empty-lines (nombre d'espaces maximum entre les lignes vides)
empty-lines = { max = 1 }

# line-length (longueur de ligne maximale)
line-length = { max = 120 }

# new-line-at-end-of-file (s'assurer qu'il y a une nouvelle ligne à la fin du fichier)
new-line-at-end-of-file = { present = true }

# key-duplicates (pas de clés dupliquées dans le même objet)
key-duplicates = { forbid = true }

# hyphens (espaces après les tirets dans les listes)
hyphens = { max-spaces-after = 1 }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "mypy>=1.20.1",
    "bandit>=1.9.2",
    "safety>=3.7.0",
    "vulture>=2.14",
    "yamllint>=1.37.1",
    "yamlfix>=1.17.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# Suppress external library type stub warnings (not our responsibility)
disable_error_code = ["import-untyped"]
exclude = [
    "tests/",
    "build/",
    "dist/",
]

[tool.bandit]
exclude_dirs = [
    "tests/",
    "test/",
    ".venv/",
    "venv/",
]
skips = [
    "B101",  # assert_used - commonly used in tests
    "B601",  # paramiko_calls - if using paramiko legitimately
]

# quoted-strings (exiger les guillemets pour les chaînes multi-lignes)
# quoted-strings = { required = true }

# forbidden-contents (interdire certains contenus, par exemple des noms d'hôtes en dur)
# forbidden-contents = { forbidden = [ "http://evil.com" ] }

# Commande de fichier (utile pour cibler des fichiers spécifiques ou exclure)
# parse = { pattern = "\\.yaml$" } # Par défaut yamllint traite .yaml, .yml
# exclude = [
#     "path/to/ignore/**/*.yaml",
#     "another/path/generated.yml"
# ]
